--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-opencv-python
-numpy
-scipy
+opencv-python==4.6.0.66
+numpy==1.23.4
+scipy==1.9.3
 face-recognition==1.3.0
-face_recognition_models
-requests
-streamlit-lottie
-streamlit-folium
-streamlit-option-menu
-folium
+face_recognition_models==0.3.0
+requests==2.28.1
+streamlit-lottie==0.0.3
+streamlit-folium==0.6.15
+streamlit-option-menu==0.3.2
+folium==0.13.0
