--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-dlib-bin
+dlib==19.24.0
 opencv-python==4.6.0.66
-streamlit
+streamlit==1.13.0
 numpy==1.23.4
 scipy==1.9.3
 face-recognition==1.3.0
